Fixing randomize option for featurettes, Closes #193. Fixing gold bar on mobile, Closes #191, Closes #162.

--- a/scss/utilities/_wvu-active-nav-link.scss
+++ b/scss/utilities/_wvu-active-nav-link.scss
@@ -2,20 +2,40 @@
 //==================================================
 // This just adds a gold bar to the top of the nav item that is active in your primary navigation.
 
-.wvu-nav {
-  position: relative;
-  .active {
-    background-color: transparent $global-important;
+@media (min-width: $wvu-bp-xs) {
+  .wvu-nav {
+    position: relative;
+    .active {
+      background-color: transparent $global-important;
+    }
+    > ul {
+      > li {
+        > .active {
+          &:before {
+            border-left: 3px solid $wvu-gold;
+            content: '';
+            left: 0;
+            top: 0;
+            position: absolute;
+            height: 100%;
+          }
+        }
+      }
+    }
   }
-  > ul {
-    > li {
-      > .active {
-        &:before {
-          border-top: 3px solid $wvu-gold;
-          content: '';
-          left: 0;
-          position: absolute;
-          width: 100%;
+}
+
+@media (min-width: $wvu-bp-lg) {
+  .wvu-nav {
+    > ul {
+      > li {
+        > .active {
+          &:before {
+            border-left: 0px;
+            border-top: 3px solid $wvu-gold;
+            height: auto;
+            width: 100%;
+          }
         }
       }
     }
